--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "private": true,
   "keywords": [],
-  "author": "shubhambattoo",
+  "author": "sibongumusa14",
   "license": "MIT",
   "dependencies": {
     "ejs": "^3.1.5",
